fix: Update to follow the Moodle guidelines
Added privacy api.
Added Moodle GPL statement.
Rename the repository and the places where it's mentioned.

Taskid 35708

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "moodle-tinymce6_wiris",
+  "name": "moodle-tiny_wiris",
   "version": "8.2.2",
   "description": "Type and handwrite mathematical notation in Moodle with MathType fro TinyMCE6 Editor",
   "homepage": "https://moodle.org/plugins/tinymce_tiny_mce_wiris",
