fix: Moodle Code checker errors
#taskid 46125

--- a/.github/workflows/moodle-ci.yml
+++ b/.github/workflows/moodle-ci.yml
@@ -167,8 +167,4 @@ jobs:
         run: moodle-plugin-ci phpunit
       # Run all Behat tests on latest Moodle branch
       - name: Behat features
-        run: |
-          docker run -d --rm --name=selenium --net=host --shm-size=2g -v /home/runner/work/moodle-atto_wiris/moodle-atto_wiris/moodle:/home/runner/work/moodle-atto_wiris/moodle-atto_wiris/moodle selenium/standalone-chrome:3
-          nohup php -S localhost:8000 -t /home/runner/work/moodle-atto_wiris/moodle-atto_wiris/moodle > phpd.log 2>&1 &
-          php moodle/admin/tool/behat/cli/run.php --tags=@tiny_wiris_current --profile=chrome --suite=default --auto-rerun=2 --verbose -vvv
-          docker stop selenium
+        run: moodle-plugin-ci behat --profile default -vvv
