--- a/.github/workflows/moodle-ci.yml
+++ b/.github/workflows/moodle-ci.yml
@@ -41,12 +41,12 @@ jobs:
       fail-fast: false
       matrix:
         php: ['8.0', '8.1', '8.2', '8.3']
-        moodle-branch: [MOODLE_402_STABLE, MOODLE_403_STABLE, main]
+        moodle-branch: [MOODLE_402_STABLE, MOODLE_403_STABLE, MOODLE_404_STABLE, main]
         database: [pgsql]
         exclude:
           # Exclude Moodle+PHP incompatible versions
           # See: https://docs.moodle.org/dev/Moodle_and_PHP
-          - moodle-branch: 'MOODLE_403_STABLE'
+          - moodle-branch: 'MOODLE_404_STABLE'
             php: '8.0'
           - moodle-branch: 'main'
             php: '8.0'
