--- a/.github/workflows/moodle-ci.yml
+++ b/.github/workflows/moodle-ci.yml
@@ -178,6 +178,7 @@ jobs:
       # Known tags: @3.x_plugin, @4.0_plugin, @4.x_plugin
       # Run Behat tests on all Moodle branches.
       - name: Behat features for ( ${{ matrix.moodle-branch }} on PHP ${{ matrix.php }} )
+        id: behat
         if: ${{ always() }}
         run: |
           case "${{ matrix.moodle-branch }}" in
@@ -197,6 +198,7 @@ jobs:
           moodle-plugin-ci behat --tags=$TAG --profile ${{ matrix.browser }} --auto-rerun=2 --verbose -vvv
 
       - name: Upload Behat Faildump
+        if: ${{ failure() && steps.behat.outcome == 'failure' }}
         uses: actions/upload-artifact@v4
         with:
           name: Behat Faildump (${{ join(matrix.*, ', ') }})
