--- a/.github/workflows/moodle-ci.yml
+++ b/.github/workflows/moodle-ci.yml
@@ -126,7 +126,7 @@ jobs:
         continue-on-error: true
         run: |
           moodle-plugin-ci add-plugin --branch ${{ env.BRANCH_NAME }} wiris/moodle-filter_wiris
-      - name: Add MathType filter plugin using the stable branch
+      - name: Add MathType filter plugin using the main branch
         if: steps.install-plugin-filter.outcome != 'success'
         run: |
           moodle-plugin-ci add-plugin --branch main wiris/moodle-filter_wiris
@@ -137,7 +137,7 @@ jobs:
         continue-on-error: true
         run: |
           moodle-plugin-ci add-plugin --branch ${{ env.BRANCH_NAME }} wiris/moodle-atto_wiris
-      - name: Add MathType plugin for Atto using the stable branch
+      - name: Add MathType plugin for Atto using the main branch
         if: steps.install-plugin-atto.outcome != 'success'
         run: |
           moodle-plugin-ci add-plugin --branch main wiris/moodle-atto_wiris
@@ -204,5 +204,5 @@ jobs:
         with:
           name: Behat Faildump (${{ join(matrix.*, ', ') }})
           path: ${{ github.workspace }}/moodledata/behat_dump
-          retention-days: 7
+          retention-days: 1
           if-no-files-found: ignore
