--- a/.github/workflows/moodle-ci.yml
+++ b/.github/workflows/moodle-ci.yml
@@ -36,6 +36,7 @@ jobs:
             "MOODLE_402_STABLE",
             "MOODLE_403_STABLE",
             "MOODLE_404_STABLE",
+            "main",
           ]
         database: [pgsql]
         browser: ["chrome", "firefox"]
@@ -49,13 +50,19 @@ jobs:
             php: "7.4"
           - moodle-branch: "MOODLE_404_STABLE"
             php: "7.4"
+          - moodle-branch: "main"
+            php: "7.4"
 
           - moodle-branch: "MOODLE_404_STABLE"
+            php: "8.0"
+          - moodle-branch: "main"
             php: "8.0"
 
           - moodle-branch: "MOODLE_400_STABLE"
             php: "8.2"
           - moodle-branch: "MOODLE_401_STABLE"
+            php: "8.2"
+          - moodle-branch: "main"
             php: "8.2"
 
           - moodle-branch: "MOODLE_401_STABLE"
@@ -63,6 +70,8 @@ jobs:
           - moodle-branch: "MOODLE_402_STABLE"
             php: "8.3"
           - moodle-branch: "MOODLE_403_STABLE"
+            php: "8.3"
+          - moodle-branch: "main"
             php: "8.3"
 
     steps:
