feat: add tags to behat for main branch

--- a/.github/workflows/moodle-ci.yml
+++ b/.github/workflows/moodle-ci.yml
@@ -189,7 +189,7 @@ jobs:
             "MOODLE_400_STABLE")
               TAG="@4.0_tinymce6"
               ;;
-            "MOODLE_401_STABLE"|"MOODLE_402_STABLE"|"MOODLE_403_STABLE"|"MOODLE_404_STABLE")
+            "MOODLE_401_STABLE"|"MOODLE_402_STABLE"|"MOODLE_403_STABLE"|"MOODLE_404_STABLE"|"main")
               TAG="@4.x_tinymce6"
               ;;
             *)
