--- a/.github/workflows/moodle-ci.yml
+++ b/.github/workflows/moodle-ci.yml
@@ -210,7 +210,7 @@ jobs:
               TAG="@tinymce6"
               ;;
           esac
-          echo "moodle-plugin-ci behat --tags=$TAG${{ github.event.inputs.tags }} --profile ${{ matrix.browser }} --auto-rerun=2 --verbose -vvv"
+          echo "moodle-plugin-ci behat --tags='$TAG${{ github.event.inputs.tags }}' --profile ${{ matrix.browser }} --auto-rerun=2 --verbose -vvv"
           moodle-plugin-ci behat --tags=$TAG${{ github.event.inputs.tags }} --profile ${{ matrix.browser }} --auto-rerun=2 --verbose -vvv
 
       - name: Upload Behat Faildump
