--- a/.github/workflows/moodle-ci.yml
+++ b/.github/workflows/moodle-ci.yml
@@ -211,7 +211,7 @@ jobs:
               ;;
           esac
           echo "moodle-plugin-ci behat --tags='$TAG${{ github.event.inputs.tags }}' --profile ${{ matrix.browser }} --auto-rerun=2 --verbose -vvv"
-          moodle-plugin-ci behat --tags=$TAG${{ github.event.inputs.tags }} --profile ${{ matrix.browser }} --auto-rerun=2 --verbose -vvv
+          moodle-plugin-ci behat --tags='$TAG${{ github.event.inputs.tags }}' --profile ${{ matrix.browser }} --auto-rerun=2 --verbose -vvv
 
       - name: Upload Behat Faildump
         if: ${{ failure() && steps.behat.outcome == 'failure' }}
