--- a/.github/workflows/moodle-ci.yml
+++ b/.github/workflows/moodle-ci.yml
@@ -198,19 +198,20 @@ jobs:
         run: |
           case "${{ matrix.moodle-branch }}" in
             "MOODLE_38_STABLE"|"MOODLE_39_STABLE"|"MOODLE_311_STABLE")
-              TAG="@3.x_tinymce6"
+              TAG="@3.x_tinymce6${{ github.event.inputs.tags }}"
               ;;
             "MOODLE_400_STABLE")
-              TAG="@4.0_tinymce6"
+              TAG="@4.0_tinymce6${{ github.event.inputs.tags }}"
               ;;
             "MOODLE_401_STABLE"|"MOODLE_402_STABLE"|"MOODLE_403_STABLE"|"MOODLE_404_STABLE"|"main")
-              TAG="@4.x_tinymce6"
+              TAG="@4.x_tinymce6${{ github.event.inputs.tags }}"
               ;;
             *)
-              TAG="@tinymce6"
+              TAG="@tinymce6${{ github.event.inputs.tags }}"
               ;;
           esac
-          moodle-plugin-ci behat --tags=$TAG${{ github.event.inputs.tags }} --profile ${{ matrix.browser }} --auto-rerun=2 --verbose -vvv
+          echo "moodle-plugin-ci behat --tags=$TAG --profile ${{ matrix.browser }} --auto-rerun=2 --verbose -vvv"
+          moodle-plugin-ci behat --tags=$TAG --profile ${{ matrix.browser }} --auto-rerun=2 --verbose -vvv
 
       - name: Upload Behat Faildump
         if: ${{ failure() && steps.behat.outcome == 'failure' }}
