--- a/.github/workflows/moodle-ci.yml
+++ b/.github/workflows/moodle-ci.yml
@@ -41,6 +41,7 @@ jobs:
             "MOODLE_402_STABLE",
             "MOODLE_403_STABLE",
             "MOODLE_404_STABLE",
+            "MOODLE_405_STABLE",
             "main",
           ]
         database: [pgsql]
@@ -55,10 +56,14 @@ jobs:
             php: "7.4"
           - moodle-branch: "MOODLE_404_STABLE"
             php: "7.4"
+          - moodle-branch: "MOODLE_405_STABLE"
+            php: "7.4"
           - moodle-branch: "main"
             php: "7.4"
 
           - moodle-branch: "MOODLE_404_STABLE"
+            php: "8.0"
+          - moodle-branch: "MOODLE_405_STABLE"
             php: "8.0"
           - moodle-branch: "main"
             php: "8.0"
@@ -203,7 +208,7 @@ jobs:
             "MOODLE_400_STABLE")
               TAG="@4.0_tinymce6${{ github.event.inputs.tags }}"
               ;;
-            "MOODLE_401_STABLE"|"MOODLE_402_STABLE"|"MOODLE_403_STABLE"|"MOODLE_404_STABLE"|"main")
+            "MOODLE_401_STABLE"|"MOODLE_402_STABLE"|"MOODLE_403_STABLE"|"MOODLE_404_STABLE"|"MOODLE_405_STABLE"|"main")
               TAG="@4.x_tinymce6${{ github.event.inputs.tags }}"
               ;;
             *)
