--- a/.github/workflows/moodle-ci.yml
+++ b/.github/workflows/moodle-ci.yml
@@ -158,6 +158,7 @@ jobs:
         id: install-plugin-atto
         continue-on-error: true
         run: |
+          echo ${{ env.moodle-branch }}
           moodle-plugin-ci add-plugin --branch ${{ env.BRANCH_NAME }} wiris/moodle-atto_wiris
       - name: Add MathType plugin for Atto using the main branch
         if: steps.install-plugin-atto.outcome != 'success' && ${{ env.moodle-branch }} != 'main'
