--- a/.github/workflows/moodle-ci.yml
+++ b/.github/workflows/moodle-ci.yml
@@ -154,14 +154,13 @@ jobs:
 
       # 3.2 Install Atto plugin
       - name: Add MathType plugin for Atto
-        if: ${{ env.moodle-branch != 'main' }}
+        if: ${{ matrix.moodle-branch != 'main' }}
         id: install-plugin-atto
         continue-on-error: true
         run: |
-          echo ${{ env.moodle-branch }}
           moodle-plugin-ci add-plugin --branch ${{ env.BRANCH_NAME }} wiris/moodle-atto_wiris
       - name: Add MathType plugin for Atto using the main branch
-        if: ${{ steps.install-plugin-atto.outcome != 'success' && env.moodle-branch != 'main' }}
+        if: ${{ steps.install-plugin-atto.outcome != 'success' && matrix.moodle-branch != 'main' }}
         run: |
           moodle-plugin-ci add-plugin --branch main wiris/moodle-atto_wiris
 
