--- a/.github/workflows/moodle-ci.yml
+++ b/.github/workflows/moodle-ci.yml
@@ -14,7 +14,7 @@ on:
       - main
   pull_request:
     branches:
-      - "*"
+      - "**"
   schedule:
     - cron: "30 6 * * *"
 
@@ -42,6 +42,7 @@ jobs:
             "MOODLE_403_STABLE",
             "MOODLE_404_STABLE",
             "MOODLE_405_STABLE",
+            "MOODLE_500_STABLE",
             "main",
           ]
         database: [pgsql]
@@ -60,14 +61,20 @@ jobs:
             php: "7.4"
           - moodle-branch: "main"
             php: "7.4"
+          - moodle-branch: "MOODLE_500_STABLE"
+            php: "7.4"
 
           - moodle-branch: "MOODLE_404_STABLE"
             php: "8.0"
           - moodle-branch: "MOODLE_405_STABLE"
             php: "8.0"
+          - moodle-branch: "MOODLE_500_STABLE"
+            php: "8.0"
           - moodle-branch: "main"
             php: "8.0"
 
+          - moodle-branch: "MOODLE_500_STABLE"
+            php: "8.1"
           - moodle-branch: "main"
             php: "8.1"
 
@@ -75,8 +82,6 @@ jobs:
           - moodle-branch: "MOODLE_400_STABLE"
             php: "8.2"
           - moodle-branch: "MOODLE_401_STABLE"
-            php: "8.2"
-          - moodle-branch: "main"
             php: "8.2"
 
           - moodle-branch: "MOODLE_401_STABLE"
@@ -154,12 +159,13 @@ jobs:
 
       # 3.2 Install Atto plugin
       - name: Add MathType plugin for Atto
+        if: ${{ contains(fromJson('["MOODLE_38_STABLE", "MOODLE_39_STABLE", "MOODLE_311_STABLE", "MOODLE_400_STABLE", "MOODLE_401_STABLE", "MOODLE_402_STABLE", "MOODLE_403_STABLE", "MOODLE_404_STABLE", "MOODLE_405_STABLE"]'), matrix.moodle-branch) }}
         id: install-plugin-atto
         continue-on-error: true
         run: |
           moodle-plugin-ci add-plugin --branch ${{ env.BRANCH_NAME }} wiris/moodle-atto_wiris
       - name: Add MathType plugin for Atto using the main branch
-        if: steps.install-plugin-atto.outcome != 'success'
+        if: ${{contains(fromJson('["MOODLE_38_STABLE", "MOODLE_39_STABLE", "MOODLE_311_STABLE", "MOODLE_400_STABLE", "MOODLE_401_STABLE", "MOODLE_402_STABLE", "MOODLE_403_STABLE", "MOODLE_404_STABLE", "MOODLE_405_STABLE"]'), matrix.moodle-branch) && steps.install-plugin-atto.outcome != 'success' }}
         run: |
           moodle-plugin-ci add-plugin --branch main wiris/moodle-atto_wiris
 
@@ -210,8 +216,11 @@ jobs:
             "MOODLE_400_STABLE")
               TAG="@4.0_tinymce6${{ github.event.inputs.tags }}"
               ;;
-            "MOODLE_401_STABLE"|"MOODLE_402_STABLE"|"MOODLE_403_STABLE"|"MOODLE_404_STABLE"|"MOODLE_405_STABLE"|"main")
+            "MOODLE_401_STABLE"|"MOODLE_402_STABLE"|"MOODLE_403_STABLE"|"MOODLE_404_STABLE"|"MOODLE_405_STABLE")
               TAG="@4.x_tinymce6${{ github.event.inputs.tags }}"
+              ;;
+            "MOODLE_500_STABLE"|"main")
+              TAG="@5.x_tinymce6${{ github.event.inputs.tags }}"
               ;;
             *)
               TAG="@tinymce6${{ github.event.inputs.tags }}"
