--- a/.github/workflows/moodle-ci.yml
+++ b/.github/workflows/moodle-ci.yml
@@ -89,12 +89,16 @@ jobs:
             php: "8.2"
           - moodle_branch: "MOODLE_401_STABLE"
             php: "8.2"
+          - moodle_branch: "main"
+            php: "8.2"
 
           - moodle_branch: "MOODLE_401_STABLE"
             php: "8.3"
           - moodle_branch: "MOODLE_402_STABLE"
             php: "8.3"
           - moodle_branch: "MOODLE_403_STABLE"
+            php: "8.3"
+          - moodle_branch: "main"
             php: "8.3"
 
           - moodle_branch: "MOODLE_401_STABLE"
